# air

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example-01.cpp  example-02.cpp  example-03.cpp
include/: CMakeLists.txt
include/air/: broadcaster.h  channel.h  message.h  syslog_channel.h  threaded_channel.h
include/test/: empty_deleter.h
src/: CMakeLists.txt  broadcaster.cpp  message.cpp  syslog_channel.cpp  threaded_channel.cpp
tests/: CMakeLists.txt  test_broadcaster.cpp  test_message.cpp
